<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="103dp"
        android:text="@string/bienvenida"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="119dp"
        tools:layout_editor_absoluteY="16dp" />

    <ImageView
        android:id="@+id/logoEscuela"
        android:layout_width="299dp"
        android:layout_height="51dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo_tecmi"
        android:src="@drawable/tecmilenio_logo2" />

    <ImageView
        android:id="@+id/logoAndroid"
        android:layout_width="147dp"
        android:layout_height="153dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo_android"
        android:src="@drawable/android_logo" />

    <Button
        android:id="@+id/bAcceder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="182dp"
        android:text="@string/boton_acceder"
        android:textAllCaps="false"
        android:textSize="24sp" />
</RelativeLayout>